fix: fix header on small resolutions

--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -13,6 +13,7 @@ header {
 }
 
 header h1 {
+    margin-right: 40px;
     font-size: 40px;
     font-weight: 800;
 }
